aws_resources/components/manifests/app-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasky-for-wiz
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tasky-for-wiz
  template:
    metadata:
      labels:
        app: tasky-for-wiz
    spec:
      containers:
      - name: tasky-for-wiz
        image: tasky-for-wiz-image #to be changed!!
        ports:
        - containerPort: 8080
