aws_resources/components/manifests/service-manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasky-for-wiz-service
spec:
  selector:
    app: tasky-for-wiz
  ports:
    - protocol: TCP
      port: 80  # The port exposed by the service
      targetPort: 8080  # The port on the pod to which traffic should be forwarded
  type: LoadBalancer  # Service type
